kubernetes/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: polydom-dev
  labels:
    environment: development
